Fix - CSS: jQuery UI styling with `cell-border` class and scrolling enabled could have the columns looking like they are slightly misaligned (1px) due to an incorrect border assignment
- Need to have the border modification in the header match how the body
  works - i.e. on the left do the collpase

--- a/media/css/dataTables.jqueryui.css
+++ b/media/css/dataTables.jqueryui.css
@@ -431,11 +431,11 @@ table.dataTable thead th div.DataTables_sort_wrapper span {
 }
 table.dataTable thead th.ui-state-default,
 table.dataTable tfoot th.ui-state-default {
-  border-right-width: 0;
+  border-left-width: 0;
 }
-table.dataTable thead th.ui-state-default:last-child,
-table.dataTable tfoot th.ui-state-default:last-child {
-  border-right-width: 1px;
+table.dataTable thead th.ui-state-default:first-child,
+table.dataTable tfoot th.ui-state-default:first-child {
+  border-left-width: 1px;
 }
 
 /*
